[broker] Select adaptive replicas per strict partition
Delegate strict adaptive routing to ReplicaGroupInstanceSelector so each segment chooses the healthiest candidate from one query-wide ranking snapshot. Strict candidate filtering gives same-partition segments identical ordered candidate lists, preserving consistency without mirror-set metadata while allowing partitions to select independently.

Keep fixed-replica rejection and the non-adaptive numReplicaGroupsToQuery behavior. Use floorMod for round-robin fallback across the full request ID range.

Committed-By-Agent: codex
Co-authored-by: codex <noreply@openai.com>